# HSOL-python-boilerplate

./: README.md  pyproject.toml
.github/: copilot-instructions.md
