[project]
name = "hsol-python-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 88
target-version = "py310" # Assuming Python 3.10+
fix = false # Enable autofix for selected rules

[tool.ruff.lint]
# E/F (Pyflakes), W (pycodestyle), N (pep8-naming), I (isort),
# UP (pyupgrade), B (flake8-bugbear), C4 (flake8-comprehensions), SIM (flake8-simplify)
select = ["E", "F", "W", "N", "I", "UP", "B", "C4", "SIM"]
